# Laba1

./: README.md  sonar-project.properties
.github/workflows/: build.yml
app/: CMakeLists.txt  main.c  square_root.h
docs/: tests_desk.md
tests/: CMakeLists.txt  main.cpp  root_tests.h
